--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "msg-session-manager",
   "version": "0.0.1",
-  "description": "a messaging module, to manage session and backend communication",
+  "description": "a messaging module, to host websocket connections",
   "main": "lib/",
   "scripts": {
     "start": "DEBUG=true nodemon --exec babel-node -- src/index.js | bunyan",
@@ -19,19 +19,20 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
+    "engine.io": "^1.6.8",
+    "engine.io-client": "^1.6.8",
     "express": "^4.13.3",
-    "immutable": "^3.7.5",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
+    "mirage": "0.0.5",
     "mysql": "^2.10.2",
-    "socket.io": "^1.4.5",
-    "socketio-jwt": "^4.3.4"
+    "primus": "^5.2.0",
+    "primus-emitter": "^3.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
-    "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
