--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "engine.io": "^1.6.8",
     "engine.io-client": "^1.6.8",
     "express": "^4.13.3",
+    "ioredis": "^1.15.1",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
     "mirage": "0.0.5",
