--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "amqplib": "^0.4.1",
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "engine.io": "^1.6.8",
