--- a/package.json
+++ b/package.json
@@ -12,30 +12,33 @@
   "author": "Raven Chen",
   "license": "MIT",
   "babel": {
-    "presets": [
-      "es2015"
+    "plugins": [
+      "transform-es2015-modules-commonjs",
+      "transform-async-to-generator"
     ]
   },
   "dependencies": {
     "amqplib": "^0.4.1",
+    "blocked": "^1.2.1",
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "engine.io": "^1.6.8",
     "engine.io-client": "^1.6.8",
     "express": "^4.13.3",
-    "ioredis": "^1.15.1",
-    "jsonwebtoken": "^5.7.0",
-    "lodash": "^3.10.1",
-    "mirage": "0.0.5",
+    "ioredis": "^2.0.1",
+    "jsonwebtoken": "^7.0.0",
+    "lodash": "^4.13.1",
+    "mirage": "0.0.6",
     "mysql": "^2.10.2",
     "primus": "^5.2.0",
     "primus-emitter": "^3.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-core": "^6.9.1",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "chai": "^3.4.1",
-    "mocha": "^2.3.4",
+    "mocha": "^2.5.3",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   }
